fix: scrollbar

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -2,11 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 @layer utilities {
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  .no-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
 }
